old/out
parser.cc:13:34: error: Array 'buf[10]' accessed at index 99, which is out of bounds. [arrayIndexOutOfBounds]
    for (int i=0; i<100; i++) buf[i] = 0;
                                 ^
